tests/base/invalid/List_CompileFail_6.whiley
import * from whiley.lang.*

int f([int] a):
    return a
